--- a/www/css/main.css
+++ b/www/css/main.css
@@ -10,3 +10,77 @@ body, html {
   box-sizing: border-box;
   background-image: linear-gradient(cornflowerblue, deeppink);
 }
+
+.chat-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  box-sizing: border-box;
+}
+
+.chat-messages {
+  width: 100%;
+  height: 50%;
+  max-width: 720px;
+  margin: 0 auto;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.chat-input {
+  width: 100%;
+  height: 50%;
+  max-width: 720px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.form-element.input-button {
+  max-width: 200px;
+  margin: 0 auto;
+  border-radius: 5px;
+  padding: 14px 20px;
+  box-shadow: 2px 2px 2px 2px #000;
+  background-color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color linear .15s;
+}
+.input-button:hover {
+  background-color: #aaa;
+}
+
+input.form-element, textarea.form-element, label.form-label {
+  width: 100%;
+  margin: 0 auto 24px;
+  font-size: 24px;
+  box-sizing: border-box;
+}
+input.form-element:focus, textarea.form-element:focus, label.form-label:focus {
+  outline: none;
+}
+
+
+label.form-label {
+  margin-bottom: 0;
+  color: aliceblue;
+  font-size: 32px;
+  text-transform: uppercase;
+}
+
+label.form-label-error {
+  opacity: 0;
+  color: #00f;
+  text-align: center;
+}
+
+textarea.form-element {
+  height: 4em;
+}
