--- a/www/css/main.css
+++ b/www/css/main.css
@@ -45,16 +45,20 @@ body, html {
 .form-element.input-button {
   max-width: 200px;
   margin: 0 auto;
+  border: none;
+  outline: 0;
   border-radius: 5px;
   padding: 14px 20px;
-  box-shadow: 2px 2px 2px 2px #000;
+  box-shadow: 8px 8px 12px 4px #000;
+  font-size: 14px;
   background-color: #fff;
   cursor: pointer;
   text-transform: uppercase;
-  transition: background-color linear .15s;
+  transition: all linear .15s;
 }
 .input-button:hover {
   background-color: #aaa;
+  box-shadow: 4px 4px 12px 2px #000;
 }
 
 input.form-element, textarea.form-element, label.form-label {
@@ -79,6 +83,8 @@ label.form-label-error {
   opacity: 0;
   color: #00f;
   text-align: center;
+  font-size: 20px;
+  margin-bottom: 12px;
 }
 
 textarea.form-element {
