--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,19 +1,65 @@
+@import "fonts.css";
+
+:root {
+  --color-bg: #ff914d;
+  --color-light: #fff;
+  --color-dark: #000;
+  --color-hover: #aaa;
+  --color-error: #f44;
+}
+
 body, html {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: sans-serif;
+  font-family: LeagueGothic, sans-serif;
 }
 
 .body-container {
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
-  background: #ff914d;
+  background: var(--color-bg);
+}
+
+.header-container {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.header-logo {
+  width: 220px;
+  height: 101px;
+  margin-right: 42px;
+  padding: 0;
+  background-image: url(../imgs/logo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.header-info {
+  padding: 0;
+  margin-top: -6px;
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.header-icons {
+  
+}
+
+.content-container {
+  width: 100%;
+  height: 80%;
 }
 
 .chat-container {
-  width: 100%;
+  width: 25%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -30,6 +76,7 @@ body, html {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  background-color: var(--color-dark);
 }
 
 .chat-input {
@@ -48,43 +95,51 @@ body, html {
   margin: 0 auto;
   border: none;
   outline: 0;
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 14px 20px;
-  box-shadow: 8px 8px 12px 4px #000;
   font-size: 14px;
-  background-color: #fff;
+  background-color: var(--color-dark);
+  color: var(--color-bg);
   cursor: pointer;
   text-transform: uppercase;
   transition: all linear .15s;
 }
 .input-button:hover {
-  background-color: #aaa;
-  box-shadow: 4px 4px 12px 2px #000;
+  background-color: var(--color-hover);
 }
 
-input.form-element, textarea.form-element, label.form-label {
+input.form-element, textarea.form-element {
   width: 100%;
-  margin: 0 auto 24px;
+  margin: 7px auto;
+  border: none;
   font-size: 24px;
   box-sizing: border-box;
+  background-color: var(--color-dark);
+  color: var(--color-light);
 }
+
+input.form-element::placeholder, textarea.form-element::placeholder {
+  color: var(--color-hover);
+  opacity: 1;
+}
+
+input.form-element:-ms-input-placeholder, textarea.form-element:-ms-input-placeholder {
+  color: var(--color-hover);
+}
+
+input.form-element::-ms-input-placeholder, textarea.form-element::-ms-input-placeholder {
+  color: var(--color-hover);
+}
+
 input.form-element:focus, textarea.form-element:focus, label.form-label:focus {
   outline: none;
 }
 
-
-label.form-label {
-  margin-bottom: 0;
-  color: aliceblue;
-  font-size: 32px;
-  text-transform: uppercase;
-}
-
 label.form-label-error {
   opacity: 0;
-  color: #00f;
+  color: var(--color-error);
   text-align: center;
-  font-size: 20px;
+  font-size: 32px;
   margin-bottom: 12px;
 }
 
