--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,5 +1,13 @@
 @import "main.css";
 
+.body-container {
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  box-sizing: border-box;
+  background: var(--color-bg);
+}
+
 .header-container {
   width: 100%;
   height: 20%;
