--- a/www/css/home.css
+++ b/www/css/home.css
@@ -1,13 +1,18 @@
 @import "main.css";
 
 .body-container {
-  padding: 24px;
+  width: 100vw;
+  height: 100%;
+  padding: 12px 24px;
+  box-sizing: border-box;
+  background: var(--color-bg);
 }
 
 .home-container {
   width: 100%;
   max-width: 800px;
   height: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
