--- a/www/css/app.css
+++ b/www/css/app.css
@@ -24,8 +24,7 @@ html {
 
 .header-logo {
   width: 220px;
-  height: 101px;
-  margin-right: 42px;
+  height: 100px;
   padding: 0;
   background-image: url(../imgs/logo.png);
   background-size: contain;
@@ -35,8 +34,9 @@ html {
 
 .header-info {
   padding: 0;
-  margin-top: -6px;
+  margin: -2px 42px 0;
   font-size: 50px;
+  line-height: 50px;
   text-transform: uppercase;
 }
 
@@ -45,7 +45,6 @@ html {
 .content-container {
   display: flex;
   flex-direction: row;
-
   width: 100%;
   height: 80%;
 }
@@ -55,7 +54,7 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 6px;
+  padding: 16px;
   box-sizing: border-box;
 }
 
@@ -79,16 +78,17 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-end;
   box-sizing: border-box;
 }
 
 .form-element.input-button {
-  max-width: 200px;
-  margin: 0 auto;
+  width: 50%;
+  max-width: 100px;
   border: none;
   outline: 0;
   border-radius: 2px;
-  padding: 14px 20px;
+  padding: 10px 20px;
   font-size: 14px;
   background-color: var(--color-dark);
   color: var(--color-bg);
@@ -103,6 +103,7 @@ html {
 input.form-element, textarea.form-element {
   width: 100%;
   margin: 7px auto;
+  padding: 8px;
   border: none;
   font-size: 18px;
   box-sizing: border-box;
@@ -111,16 +112,19 @@ input.form-element, textarea.form-element {
 }
 
 input.form-element::placeholder, textarea.form-element::placeholder {
-  color: var(--color-hover);
+  font-size: 14px;
+  color: var(--color-bg);
   opacity: 1;
 }
 
 input.form-element:-ms-input-placeholder, textarea.form-element:-ms-input-placeholder {
-  color: var(--color-hover);
+  font-size: 14px;
+  color: var(--color-bg);
 }
 
 input.form-element::-ms-input-placeholder, textarea.form-element::-ms-input-placeholder {
-  color: var(--color-hover);
+  font-size: 14px;
+  color: var(--color-bg);
 }
 
 input.form-element:focus, textarea.form-element:focus, label.form-label:focus {
@@ -162,15 +166,14 @@ textarea.form-element {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 6px;
+  padding: 16px;
   box-sizing: border-box;
-  background-color: aqua;
 }
 
 .video-container {
   width: 50%;
   height: 100%;
-  padding: 6px;
+  padding: 16px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
