--- a/www/css/app.css
+++ b/www/css/app.css
@@ -39,7 +39,6 @@ html {
   flex-direction: column;
   justify-content: space-between;
   padding: 0;
-/*  margin: 0 42px;*/
   font-size: 42px;
   font-weight: normal;
   line-height: 55px;
@@ -141,7 +140,7 @@ input.form-element, textarea.form-element {
   margin: 7px auto 0px;
   padding: 8px;
   border: none;
-  font-size: 18px;
+  font-size: 16px;
   box-sizing: border-box;
   background-color: var(--color-dark);
   color: var(--color-light);
@@ -188,20 +187,28 @@ textarea.form-element {
 
 .chat-message {
   width: 100%;
-  margin: 10px 0;
-  padding: 20px;
+  margin: 0 0 5px;
+  padding: 10px 6px;
+  border-bottom: 1px var(--color-light) solid;
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-  background-color: bisque;
+  color: var(--color-light);
 }
 
 .message-user {
-  width: 25%;
+  width: 20%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: .04em;
+  text-align: left;
 }
 
 .message-message {
-  width: 75%;
+  width: 80%;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: sans-serif;
 }
 
 .image-container {
@@ -224,19 +231,20 @@ textarea.form-element {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  margin: .5%;
 }
 
 .image-H {
   width: 66%;
-  padding-bottom: 50%;
+  padding-bottom: 49%;
 }
 .image-V {
   width: 33%;
-  padding-bottom: 50%;
+  padding-bottom: 49%;
 }
 .image-SQ {
-  width: 50%;
-  padding-bottom: 50%;
+  width: 49%;
+  padding-bottom: 49%;
 }
 
 .video-container {
