--- a/www/css/main.css
+++ b/www/css/main.css
@@ -4,7 +4,7 @@
   --color-bg: #ff914d;
   --color-light: #fff;
   --color-dark: #000;
-  --color-hover: #444;
+  --color-hover: #b50;
   --color-error: #fff;
 }
 
