--- a/www/css/app.css
+++ b/www/css/app.css
@@ -124,13 +124,13 @@
   outline: 0;
   border-radius: 2px;
   padding: 10px 20px;
-  margin-top: 7px;
   font-size: 14px;
   background-color: var(--color-dark);
   color: var(--color-bg);
   cursor: pointer;
   text-transform: uppercase;
   transition: all linear .15s;
+  z-index: 4;
 }
 .input-button:hover {
   background-color: var(--color-hover);
@@ -176,10 +176,14 @@ input.image-input {
 
 label.form-label-error {
   opacity: 0;
+  height: 0;
+  z-index: 0;
   color: var(--color-error);
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 12px;
+  font-size: 22px;
+  letter-spacing: .04em;
+  margin: 7px 0;
+  transition: all .15s linear;
 }
 
 textarea.form-element {
@@ -226,6 +230,7 @@ textarea.form-element {
   height: 100%;
   box-sizing: border-box;
   overflow: scroll;
+  background-color: var(--color-hover);
 }
 
 .image-wall {
