--- a/www/css/app.css
+++ b/www/css/app.css
@@ -15,7 +15,7 @@
   border-bottom: 1px #000 solid;
 
   width: 100%;
-  max-width: 800px;
+  max-width: 770px;
   height: 20%;
   display: flex;
   flex-direction: row;
@@ -35,10 +35,16 @@
   background-position: center center;
 }
 
+.header-info-wrapper, .header-buttons-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .header-info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 0;
   font-size: 42px;
   font-weight: normal;
