--- a/www/css/app.css
+++ b/www/css/app.css
@@ -101,19 +101,18 @@
 
 .chat-messages {
   width: 100%;
-  height: 50%;
   max-width: 720px;
-  margin: 0 auto;
-  overflow: scroll;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  flex-grow: 1;
+  margin: 0 auto;
+  overflow: scroll;
   background-color: var(--color-dark);
 }
 
 .chat-input {
   width: 100%;
-  height: 50%;
   max-width: 720px;
   margin: 0 auto;
   display: flex;
@@ -142,7 +141,7 @@
   background-color: var(--color-hover);
 }
 
-input.form-element, textarea.form-element {
+input.form-element {
   width: 100%;
   margin: 7px auto 0px;
   padding: 8px;
@@ -153,24 +152,23 @@ input.form-element, textarea.form-element {
   color: var(--color-light);
 }
 
-input.form-element::placeholder, textarea.form-element::placeholder {
+input.form-element::placeholder {
   font-size: 14px;
   color: var(--color-bg);
   opacity: 1;
 }
 
-input.form-element:-ms-input-placeholder, textarea.form-element:-ms-input-placeholder {
+input.form-element:-ms-input-placeholder {
   font-size: 14px;
   color: var(--color-bg);
 }
 
-input.form-element::-ms-input-placeholder, textarea.form-element::-ms-input-placeholder {
+input.form-element::-ms-input-placeholder {
   font-size: 14px;
   color: var(--color-bg);
 }
 
 input.form-element:focus,
-textarea.form-element:focus,
 label.form-label:focus,
 input.image-input:focus {
   outline: none;
@@ -190,10 +188,6 @@ label.form-label-error {
   letter-spacing: .04em;
   margin: 7px 0;
   transition: all .15s linear;
-}
-
-textarea.form-element {
-  flex-grow: 1;
 }
 
 .chat-message {
