--- a/www/css/app.css
+++ b/www/css/app.css
@@ -245,6 +245,7 @@ label.form-label-error {
   background-position: center center;
   background-size: cover;
   margin: .5%;
+  cursor: pointer;
 }
 
 .image-H {
@@ -332,4 +333,43 @@ label.form-label-error {
     width: 49%;
     padding-bottom: 49%;
   }
+}
+
+.lightbox-container {
+  display: none;
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  background-color: rgba(0,0,0,.4);
+  margin: 0;
+  border: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 900;
+  box-sizing: border-box;
+}
+
+.lightbox-image {
+  width: 100%;
+  max-width: 600px;
+  height: 100%;
+  margin: 0 auto;
+  z-index: 901;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+}
+
+.lightbox-close {
+  position: absolute;
+  top: 32px;
+  color: var(--color-light);
+  right: 32px;
+  font-family: sans-serif;
+  font-weight: 900;
+  font-size: 32px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
