--- a/www/css/app.css
+++ b/www/css/app.css
@@ -26,8 +26,8 @@
 }
 
 .header-logo {
-  width: 220px;
-  height: 102px;
+  width: 110px;
+  height: 51px;
   padding: 0;
   background-image: url(../imgs/logo.png);
   background-size: contain;
@@ -38,7 +38,7 @@
 .header-info-wrapper, .header-buttons-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .header-info {
@@ -46,9 +46,9 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 0;
-  font-size: 42px;
+  font-size: 30px;
   font-weight: normal;
-  line-height: 55px;
+  line-height: 30px;
   text-transform: uppercase;
 }
 
@@ -64,7 +64,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 40px;
+  font-size: 32px;
 }
 
 .header-icons .fa {
@@ -76,7 +76,7 @@
 }
 
 .header-instruction {
-  margin-top: 35px;
+  margin-top: 12px;
   font-size: 20px;
   letter-spacing: .04em;
   text-transform: uppercase;
@@ -311,6 +311,25 @@ label.form-label-error {
     height: 100%;
   }
 
+  .header-info-wrapper, .header-buttons-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .header-info {
+    font-size: 42px;
+    font-weight: normal;
+    line-height: 55px;
+  }
+
+  .header-icons {
+    font-size: 40px;
+  }
+  .header-instruction {
+    margin-top: 35px;
+  }
+
   .content-container {
     flex-direction: row;
     height: 80%;
@@ -349,7 +368,6 @@ label.form-label-error {
   display: none;
   width: 100vw;
   height: 100%;
-  min-height: 100vh;
   background-color: rgba(0,0,0,.4);
   margin: 0;
   border: 0;
