--- a/www/css/app.css
+++ b/www/css/app.css
@@ -15,7 +15,6 @@
   border-bottom: 1px #000 solid;
 
   width: 100%;
-  max-width: 770px;
   height: 20%;
   display: flex;
   flex-direction: row;
@@ -135,6 +134,7 @@
   border-radius: 2px;
   padding: 10px 20px;
   font-size: 14px;
+  text-align: center;
   background-color: var(--color-dark);
   color: var(--color-bg);
   cursor: pointer;
@@ -295,13 +295,14 @@ label.form-label-error {
   height: 100%;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 900px) {
   html {
     height: 100%;
     min-height: 100vh;
   }
 
   .header-container {
+    max-width: 770px;
     position: relative;
     border: none;
   }
@@ -366,7 +367,7 @@ label.form-label-error {
 
 .lightbox-container {
   display: none;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.4);
   margin: 0;
