--- a/www/css/app.css
+++ b/www/css/app.css
@@ -59,7 +59,7 @@
 }
 
 .header-icons {
-  width: 100px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -329,6 +329,7 @@ label.form-label-error {
     font-size: 40px;
   }
   .header-instruction {
+    font-size: 24px;
     margin-top: 35px;
   }
 
