--- a/www/css/app.css
+++ b/www/css/app.css
@@ -477,3 +477,18 @@ input.poster-input {
   height: 64px;
   cursor: pointer;
 }
+
+.poster-char-counter-wrapper {
+  display: block;
+  width: 80%;
+  max-width: 600px;
+}
+
+.poster-char-counter {
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  font-style: italic;
+  text-align: right;
+  color: var(--color-dark);
+}
