--- a/www/css/home.css
+++ b/www/css/home.css
@@ -1,30 +1,36 @@
 @import "main.css";
 
+body {
+  height: 100%;
+}
+
 .body-container {
   width: 100vw;
   height: 100%;
+  min-height: 100vh;
   padding: 12px 24px;
   box-sizing: border-box;
   background: var(--color-bg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 .home-container {
   width: 100%;
   max-width: 800px;
   height: 100%;
-  min-height: 100vh;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  box-sizing: border-box;
-  text-align: center;
+  
 }
 
 .home-logo {
   width: 100%;
-  padding-bottom: 46%;
+  max-width: 500px;
+  margin: 0 auto;
+  flex-grow: 1;
   background-image: url(../imgs/logo.png);
   background-position: center center;
   background-repeat: no-repeat;
