--- a/www/css/home.css
+++ b/www/css/home.css
@@ -23,14 +23,15 @@ body {
   max-width: 800px;
   height: 100%;
   margin: 0 auto;
-  
 }
 
 .home-logo {
   width: 100%;
   max-width: 500px;
+  height: 100%;
   margin: 0 auto;
   flex-grow: 1;
+  padding-bottom: 50%;
   background-image: url(../imgs/logo.png);
   background-position: center center;
   background-repeat: no-repeat;
