clickable links on chat

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -113,6 +113,10 @@
   background-color: var(--color-dark);
 }
 
+.chat-link, .chat-link:visited {
+  color: var(--color-bg);
+}
+
 .chat-messages::-webkit-scrollbar {
   width: 0px;
 }
