--- a/www/css/app.css
+++ b/www/css/app.css
@@ -18,7 +18,7 @@
   height: 20%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 20px;
   box-sizing: border-box;
   background-color: var(--color-bg);
@@ -309,7 +309,6 @@ label.form-label-error {
   }
 
   .header-container {
-    max-width: 770px;
     position: relative;
     border: none;
   }
@@ -319,20 +318,54 @@ label.form-label-error {
     height: 100%;
   }
 
-  .header-info-wrapper, .header-buttons-wrapper {
+  .header-info-wrapper, .header-buttons-wrapper, .header-about-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box;
+  }
+
+  .header-info-wrapper {
+    width: 15%;
+  }
+
+  .header-buttons-wrapper {
+    width: 220px;
+  }
+
+  .header-about-wrapper {
+    width: calc(100% - 220px - 220px - 15%);
+    padding-left: 4%;
+  }
+
+  .header-about {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+
+  .header-about-title {
+    font-size: 24px;
+    text-transform: uppercase;
+  }
+
+  .header-about-text {
+    font-size: 1.2vw;
+    font-weight: 200;
+    text-align: right;
+    text-transform: uppercase;
   }
 
   .header-info {
+    margin: 0 auto;
     font-size: 42px;
     font-weight: normal;
     line-height: 55px;
   }
 
   .header-icons {
-    width: 200px;
     font-size: 40px;
   }
   .header-instruction {
